force-app/main/default/objects/Job_Application__c/fields/Jooble_Id__c.field-meta.xml
<CustomField>
    <fullName>Jooble_Id__c</fullName>
    <label>Jooble Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>