force-app/main/default/objects/Job_Application__c/fields/Medicare_Withholding__c.field-meta.xml
<CustomField>
    <fullName>Medicare_Withholding__c</fullName>
    <label>Medicare Withholding</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>