force-app/main/default/objects/Job_Application__c/fields/Net_Annual_Pay__c.field-meta.xml
<CustomField>
    <fullName>Net_Annual_Pay__c</fullName>
    <label>Net Annual Pay</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>